--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -54,7 +54,7 @@
                                             class="matMandatory">*</strong>
                                         </mat-label>
                                         <mat-select formControlName="TourPlanId"
-                                                    (selectionChange)="getTourDiary($event)">
+                                                    (selectionChange)="getTourDiary($event)" [disabled]="!edit_mode && currentActivity.R">
                                             <mat-option>
                                                 Select
                                             </mat-option>
