--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -55,7 +55,7 @@
                                                maxlength="8"
                                                autocomplete="off" [max]="maxDate" (dateChange)="setDate()" appNumberOnly placeholder="Tour Date"/>
                                         <mat-datepicker-toggle (click)="checkZone()" [disabled]="!zone" matSuffix
-                                                               [for]="picker2"></mat-datepicker-toggle>
+                                                               [for]="picker2" [disabled]="(!zone || !edit_mode) && currentActivity.R"></mat-datepicker-toggle>
                                         <mat-datepicker #picker2></mat-datepicker>
                                     </mat-form-field>
                                 </div>
@@ -63,7 +63,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label>Tour Plan<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select formControlName="TourPlanId">
+                                        <mat-select formControlName="TourPlanId" [disabled]="!edit_mode && currentActivity.R">
                                             <mat-option>
                                                 Select
                                             </mat-option>
@@ -104,8 +104,8 @@
                                             <input type="text" matInput [ngxTimepicker]="timepickerDeparture"
                                                    [format]="DateFormat()" readonly
                                                    formControlName="DepartureFromTime" placeholder=">Departure Time"/>
-                                            <mat-icon matSuffix (click)="openFromIcon(timepickerDeparture)">schedule
-                                            </mat-icon>
+                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix (click)="openFromIcon(timepickerDeparture)">schedule</mat-icon>
+                                            <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -132,8 +132,8 @@
                                                 class="matMandatory">*</strong></mat-label>
                                             <input type="text" matInput [ngxTimepicker]="timepickerArrival"
                                                    [format]="DateFormat()" readonly formControlName="ArrivalAtTime" placeholder="Arrival Time"/>
-                                            <mat-icon matSuffix (click)="openFromIcon(timepickerArrival)">schedule
-                                            </mat-icon>
+                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix (click)="openFromIcon(timepickerArrival)">schedule</mat-icon>
+                                            <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -147,7 +147,7 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
                                             <input appNumberOnly matInput formControlName="NoOfDefaulterContacted" placeholder="No. Of Defaulters Contacted"
-                                                   autocomplete="off"/>
+                                                   autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
 
@@ -156,7 +156,7 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
                                             <input appNumberOnly matInput formControlName="ResultContactMade" placeholder="Results Of Contacts So Made"
-                                                   autocomplete="off"/>
+                                                   autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
 
@@ -165,7 +165,7 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Measure Boosting Up Record</mat-label>
                                             <input appNumberOnly matInput formControlName="MeasureBoostUpRecord" placeholder="Measure Boosting Up Record"
-                                                   autocomplete="off"/>
+                                                   autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
@@ -173,7 +173,7 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Remarks</mat-label>
                                             <input  matInput formControlName="Remarks" placeholder="Remarks"
-                                                   autocomplete="off"/>
+                                                   autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -185,24 +185,24 @@
 
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
-                                <button type="button" *ngIf="isUpdate===false && currentActivity.C" class="mr-2 bg-green" mat-raised-button
+                                <button type="button" *ngIf="isUpdate===false && currentActivity.C && edit_mode" class="mr-2 bg-green" mat-raised-button
                                         color="primary" (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Save
                                 </button>
-                                <button type="button" *ngIf="isUpdate===true && currentActivity.U" class="mr-2 bg-green" mat-raised-button
+                                <button type="button" *ngIf="isUpdate===true && currentActivity.U && edit_mode" class="mr-2 bg-green" mat-raised-button
                                         color="primary" (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Update
                                 </button>
                                 <button type="button" mat-raised-button class="mr-2"
-                                        color="primary" [disabled]="checkDisable" *ngIf="currentActivity.U" (click)="changeStatus('','S')">
+                                        color="primary" [disabled]="checkDisable" *ngIf="currentActivity.U && edit_mode" (click)="changeStatus('','S')">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     Submit
                                 </button>
                                 <button type="button"
                                         class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                                        mat-raised-button color="danger" *ngIf="currentActivity.C" (click)="onClearForm()">
+                                        mat-raised-button color="danger" *ngIf="currentActivity.C && edit_mode" (click)="onClearForm()">
                                     <mat-icon class="mr-2"> clear_all</mat-icon>
                                     Clear
                                 </button>
@@ -240,11 +240,11 @@
                                 <tbody *ngFor="let single_list of TourDiaryList">
                                 <tr>
                                     <td class="border-r border-gray-400">
-                                        <button *ngIf="checkStatus(single_list, 'edit') && currentActivity.U" type="button" mat-icon-button
+                                        <button *ngIf="checkStatus(single_list, 'edit') && currentActivity.U && edit_mode" type="button" mat-icon-button
                                                 (click)="edit(single_list); container.scrollTop = 0">
                                             <mat-icon>edit</mat-icon>
                                         </button>
-                                        <button *ngIf="checkStatus(single_list, 'delete') && currentActivity.D" type="button" mat-icon-button
+                                        <button *ngIf="checkStatus(single_list, 'delete') && currentActivity.D && edit_mode" type="button" mat-icon-button
                                                 (click)="delete(single_list,'C')">
                                             <mat-icon>delete</mat-icon>
                                         </button>
